--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     </div>
 
   <script src="js/main.js"> </script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </body>
 
 </html>
