--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>타이핑 게임</title>
   <link rel="stylesheet" href="css/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
@@ -14,7 +17,7 @@
     </div>
 
     <div class="word">
-      Hello
+      무작위 단어 생성
     </div>
 
     <div class="TypingBoxContainer">
@@ -26,16 +29,17 @@
         남은시간 : <span class="time">0</span>초
       </div>
       <div>
-        획득점수 : <span class="score">0</span>점
+        획득점수 : <span class="score">0</span>점
       </div>
     </div>
 
     <div class="GameStart">
-      <input type="button" class="loading" value="게임을 불러오는중..." onclick="run()">
+      <input type="button" class="loading btn btn-primary" value="게임을 불러오는중..." onclick="run()">
     </div>
 
   <script src="js/main.js"> </script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
 </html>
