Adding delay for loading (Random words need some time), Changed bootstrap button disabled (.loading -> #Button-Start)

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <div class="GameStart">
-      <input type="button" class="loading btn btn-primary" value="게임을 불러오는중..." onclick="run()">
+      <input type="button" id="Button-Start" class="btn btn-primary disabled" value="게임을 불러오는중..." onclick="run()">
     </div>
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
