--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="TypingBoxContainer">
-      <input type="text" class="TypingBox" value="" onkeyup="enterKey()">
+      <input type="text" class="TypingBox" value="">
     </div>
 
     <div class="GameInfo">
@@ -36,14 +36,14 @@
     </div>
 
     <div class="GameStart">
-      <input type="button" id="Button-Start" class="btn btn-primary disabled" value="게임을 불러오는중..." onclick="run()">
+      <input type="button" id="Button-Start" class="btn btn-primary disabled" value="게임을 불러오는중...">
     </div>
 
     <div id="toast"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  <script src="js/main.js"> </script>
+  <script src="js/main.js" type="module"> </script>
 </body>
 
 </html>
